Set the image to display as a block since Announcements Node level also has the image not displaying as a block spacing issue.

--- a/sass/partials/_general.scss
+++ b/sass/partials/_general.scss
@@ -48,6 +48,10 @@ h1 {
   }
 }
 
+img {
+  display: block;
+}
+
 /*
  * Layout
  */
